test/errors/test_multiple.lac
//-----------------------------------------------------------------------------------
//
// LaCoGen - Test multiple lexical tokens
//
// 23/04/2020
//
// -----------------------------------------------------------------------------------
  
%title        = "LaCoGen TEST multiple lexical tokens";
%version      = "1.0";
%author       = "Duncan Munro";
%start        = <E>;


// ====================================================================
// Predefined Character sets
// ====================================================================

{digit}		= [0-9];
{letter}	= [A-Za-z];
                                  
// ====================================================================
// Terminals
// ====================================================================

number	= {digit}+;
word	= {letter}+;
key		= "abracadabra";


// ====================================================================
// Rules
// ====================================================================

<E> : n
    | <E> "+" <E>
    | <E> "*" <E>
    | "(" <E> ")"
	| word
	| key
    ;
    
